Path changes in image upload section

--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
 <button> click Me</button>
 <br>
 <!-- Image -->
-<a href="images/pic1.jpg">
-<img src="images/pic1.jpg" alt="My sample images" width="200">
+<a href="pic1.jpg">
+<img src="pic1.jpg" alt="My sample images" width="200">
 </a>
 
 <!-- Quotations -->
